--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>javascript</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
@@ -26,18 +26,22 @@
             </li>
         </ul>
     </header>
-    <section class="container row center">
+    <section class="row justify-content-center">
 
-        <div class="container col-3 ">
-            <h2>PRODUCTO 1</h2>
+        <div class="container col-4 m-4 p-8 ">
+            <h2>Diamante</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor facere cum delectus perferendis perspiciatis necessitatibus exercitationem odit quia dolores libero voluptates ad tempore beatae, suscipit dignissimos est eligendi excepturi rerum?</P>
         </div>
-        <div class="container col-3">
-            <h2>PRODUCTO 2</h2>
+        <div class="container col-4 m-4 p-8 ">
+            <h2>Atomo </h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor facere cum delectus perferendis perspiciatis necessitatibus exercitationem odit quia dolores libero voluptates ad tempore beatae, suscipit dignissimos est eligendi excepturi rerum?</P>
         </div>
-        <div class="container col-3">
-            <h2>PRODUCTO 3</h2>
+        <div class="container col-4 m-4 p-8 ">
+            <h2>Jaula</h2>
+            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor facere cum delectus perferendis perspiciatis necessitatibus exercitationem odit quia dolores libero voluptates ad tempore beatae, suscipit dignissimos est eligendi excepturi rerum?</P>
+        </div>
+        <div class="container col-4 m-4 p-8 ">
+            <h2>Estrella</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor facere cum delectus perferendis perspiciatis necessitatibus exercitationem odit quia dolores libero voluptates ad tempore beatae, suscipit dignissimos est eligendi excepturi rerum?</P>
         </div>
 
@@ -60,7 +64,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="index.js"></script>
-    <script src="app.js"></script>
+    <script src="main.js"></script>
 </body>
 
 
