--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
-<body>
-    <header>
+<body class="">
+    <header class="bg-dark">
         <ul class="nav justify-content-center">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Active</a>
@@ -29,31 +29,33 @@
     <section class="row justify-content-center">
 
         <div class="container col-4 m-4 p-8 ">
-            <h2>Diamante</h2>
+            <h2 class="text-center">Diamante</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor facere cum delectus perferendis perspiciatis necessitatibus exercitationem odit quia dolores libero voluptates ad tempore beatae, suscipit dignissimos est eligendi excepturi rerum?</P>
         </div>
         <div class="container col-4 m-4 p-8 ">
-            <h2>Atomo </h2>
+            <h2 class="text-center">Atomo </h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor facere cum delectus perferendis perspiciatis necessitatibus exercitationem odit quia dolores libero voluptates ad tempore beatae, suscipit dignissimos est eligendi excepturi rerum?</P>
         </div>
         <div class="container col-4 m-4 p-8 ">
-            <h2>Jaula</h2>
+            <h2 class="text-center">Jaula</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor facere cum delectus perferendis perspiciatis necessitatibus exercitationem odit quia dolores libero voluptates ad tempore beatae, suscipit dignissimos est eligendi excepturi rerum?</P>
         </div>
         <div class="container col-4 m-4 p-8 ">
-            <h2>Estrella</h2>
+            <h2 class="text-center">Estrella</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor facere cum delectus perferendis perspiciatis necessitatibus exercitationem odit quia dolores libero voluptates ad tempore beatae, suscipit dignissimos est eligendi excepturi rerum?</P>
         </div>
+        <div id="final" class="container col-4 m-4 text-center p-8 ">
 
+        </div>
 
 
     </section>
 
-    <footer>
-        <ul>
-            <li>redes</li>
-            <li>direccion</li>
-            <li>inicio</li>
+    <footer class=" ">
+        <ul class="list-unstyled text-center list-inline">
+            <li class="list-inline-item">REDES</li>
+            <li class="list-inline-item">DIRECCION</li>
+            <li class="list-inline-item">INICIO</li>
 
         </ul>
 
